# andengyuanhua

./: .gitignore  .npmrc  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  _chk2.txt  _diff_light.txt  _fix_comment.mjs  _head_light.html  audit_p0_p2_2026-07-22.md  build.bat  build_clean.bat  build_dlc.bat  build_err.txt  cargo_check.txt  config.py  deploy_err.txt  deskpet.html  eslint.config.js  fe_build.txt  fe_build2.txt  fe_build3.txt  fe_build4.txt  index.html  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  predev_out.txt  recorder-select.html  recorder-widget.html  recording-border.html  refactor_plan_overlay_windows.md  refactor_plan_portal_single_webview.md  requirements.txt  research_plan_tauri_crossplatform.md  research_plan_tauri_mobile.md  research_report_wechat_screenshot_compare.md  screenshot-overlay.html  (+8 more)
.codebuddy/memory/: 2026-07-06.md  2026-07-07.md  2026-07-08.md  2026-07-09.md  2026-07-10.md  2026-07-11.md  MEMORY.md
.github/: RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: static.yml
ai-攻防/: 01-AI增强与AI辅助实现方案.md  02-持续主动攻防AI引擎实现方案.md  03-爬虫模块AI增强与辅助实现方案.md
ai-攻防/defense-tech-blueprint/: defense-tech-blueprint.html
crates/gongfang-kit/: Cargo.toml
crates/gongfang-kit/src/: ai.rs  commands.rs  lib.rs
crates/gongfang-kit/src/automation/: baseline.rs  bezier.rs  hid.rs  mod.rs  noise.rs  profiles.rs
crates/gongfang-kit/src/crawler/: immortal.rs  mod.rs  pool.rs  scheduler.rs  stealth.rs
crates/gongfang-kit/src/gateway/: mod.rs  pool.rs  shaping.rs
crates/gongfang-kit/src/kernel/: control.rs  data.rs  events.rs  knowledge.rs  mod.rs  priority.rs  reward.rs  strategy.rs  workspace.rs
crates/gongfang-kit/src/pentest/: encoder.rs  mod.rs  payload.rs  probe.rs  regex_dfa.rs  scanner.rs  topology.rs
crates/gongfang-kit/src/reverse/: cfg.rs  crypto.rs  dynamic.rs  mod.rs  protocol.rs  static_analysis.rs  symbols.rs
crates/pro-tools-kit/: Cargo.toml
crates/pro-tools-kit/src/: commands.rs  lib.rs
docs/: POSITIONING.md  diagnosis-2026-07-09.md  plan-distribution-decouple.md  plan-office-ppt.md  plan-screenshot-fix-1to10.md  release-v2.1.0-draft.md  template-sidebar-parent-child.md
docs/landing-page/: index.html
external-deps/: README.md
external-deps/_build/: codemirror-entry.js  minisearch-entry.js  paddleocr-entry.js  tiptap-entry.js  univer-entry.js
external-deps/deskpet-assets/: pet.mujin
external-deps/全局/basic-pitch/: requirements.txt  transcribe.py
external-deps/全局/paddleocr/: README.md  index.js
landing-page/: changelog.html  download.html  history.html  index.html  marketplace.html  privacy.html  support.html  wrangler.jsonc
plugins/: _ns_probe.tsx  global.d.ts  tsconfig.json
plugins/_shared/: DrillDownSidebarList.tsx  icons.ts  openWithFiles.ts  pluginRuntime.tsx  utils.ts  vite.shared.config.ts
plugins/_template/: README.md  manifest.json  vite.config.ts
plugins/_template/src/: index.tsx
plugins/deskpet/: manifest.json  vite.config.ts
plugins/deskpet/src/: index.tsx
plugins/image/: manifest.json
plugins/image/src/: ImageSidebar.tsx  ImageViewer.tsx
plugins/markitdown/: package.json  vite.config.ts
plugins/markitdown/src/: index.tsx
plugins/music/: manifest.json  vite.config.ts
plugins/music/src/: index.tsx  (+5 more)
plugins/professional/: manifest.json  package.json
plugins/reading/: manifest.json  package.json
plugins/video/: manifest.json
plugins/三色堇/: manifest.json  vite.config.ts
plugins/玉兰/: manifest.json  package.json  vite.config.ts
plugins/莲花/: manifest.json  package.json  vite.config.ts
plugins/薄荷/: manifest.json  vite.config.ts
plugins/铃兰/: manifest.json  package.json
public/: waiting-page-dark.html  waiting-page-light.html
scripts/: _dbg.mjs  build-external-deps.mjs  copy-waiting.mjs  deploy-plugins.mjs  ensure-placeholders.mjs  fetch-webview2-runtime.ps1  fix-node-modules-force.mjs  fix-node-modules.mjs  fix-react-import.mjs  gen-manifest.mjs  gen-waiting-pages.mjs  kill-port.mjs  pack-mufurong.mjs  pack-mujin.mjs  prepare-bundled-dlc.mjs
src/: App.tsx  index.css  main.tsx  overlay-deskpet.ts  overlay-recorder-select.ts  overlay-recorder.ts  overlay-screenshot.ts  overlay-transparent.css  vite-env.d.ts
src-tauri/: Cargo.toml  check_result.txt  check_warn.txt  chk2_err.txt  chk_pdf_err.txt  dump_import.json  error.txt  pnpm-workspace.yaml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: clipboard_test.rs  dump_pptx.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  pro_tools.rs  screenshot.rs  smtc.rs
src-tauri/src/services/: ai_service.rs  cache_service.rs  diagnostics.rs  document_parser.rs  docx_wps.rs  image_service.rs  log_service.rs  lsp_service.rs  lyrics_service.rs  mcp_service.rs  mod.rs  music_service.rs  note_service.rs  pptx_import.rs  pptx_wps.rs  reading_service.rs  recording_service.rs  shell_service.rs  transfer_station.rs  video_service.rs  window_manager.rs
src-tauri/src/services/recording_service/: audio_capture.rs  gpu_nv12.rs
src/components/: AppNav.tsx  CollapsibleSearch.tsx  DeskpetPet.tsx  FloatingDropzoneView.tsx  HostSidebar.tsx  IconButton.tsx  ModuleSettingsPanel.tsx  ModuleSidebarShell.tsx  NestedNavList.tsx  PluginIcon.tsx  ScreenshotOverlay.tsx  SecondaryNavShell.tsx  Titlebar.tsx  TransferStationPanel.tsx  TrayMenu.tsx
src/core/: PluginHost.tsx  overlayWindow.ts  pluginDiagnostics.ts  pluginPerformanceMonitor.ts  pluginRegistry.ts  pluginSandbox.ts
src/lib/: ThemeProvider.tsx  api.ts  bootPreview.ts  dropBridge.ts  file-logger.ts  fonts.ts  frameBuffer.ts  iconRegistry.ts  localImage.ts  logger.ts  openWith.ts  translateLanguages.ts  useSystemFonts.ts
src/stores/: appStore.ts  floatingNoteStore.ts  notesStore.ts
templates/: README.md
templates/external-dep/: README.md  entry.js
themes/: theme_ocean.json  theme_white.json
wait-page/: flower-waiting-page--dark.html  flower-waiting-page--light.html  waiting-page-dark.html  waiting-page-light.html
web/: float.html  index.html  test_clean.html
(+131 files in other folders)
