[package]
name = "pro-tools-kit"
version = "0.1.0"
edition = "2021"
description = "薄荷模块（专业工具 16 合 1）后端依赖包 —— 以内部 crate 形式独立存在"
authors = ["Rosary"]

[dependencies]
# Tauri 命令宏：#[tauri::command] 需要 tauri 依赖
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
# 图片格式转换（t1）
image = "0.25"
base64 = "0.22"
# 进程管理（t14）
sysinfo = "0.30"
# 剪贴板读写（t16）
arboard = "3"
# 文档转换（t2）—— html→md 的正则预编译
once_cell = "1"
regex = "1"
pulldown-cmark = "0.12"
